# pysdmx

./: .gitignore  README.md  pyproject.toml
demo/: demo.py  demo2.py  example.ipynb  interactive.ipynb  sample_output.ipynb
docs/: INSTALL.md  conf.py
docs/_build/doctrees/: INSTALL.doctree  README.doctree  environment.pickle  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/PYTHON/src/: index.doctree
docs/_build/doctrees/autoapi/sdmx_python/: index.doctree
docs/_build/doctrees/autoapi/sdmx_python/sdmx_client/: index.doctree
docs/_build/doctrees/autoapi/sdmx_python/ts_converter/: index.doctree
docs/_build/doctrees/autoapi/src/: index.doctree
docs/_build/doctrees/autoapi/src/JVM_Setup/: index.doctree
docs/_build/doctrees/autoapi/src/demo/: index.doctree
docs/_build/html/: .buildinfo  INSTALL.html  README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: INSTALL.md.txt  README.md.txt  index.rst.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/sdmx_python/: index.html
docs/_build/html/autoapi/src/: index.html
inst/: configuration.properties
java/: source_code.txt
src/pysdmx/: JVM_Setup.py  __init__.py  sdmx_client.py  ts_converter.py
tests/: test_get_codes.py  test_get_dimensions.py  test_get_dsd_identifier.py  test_get_flows.py  test_get_providers.py  test_get_timeseries.py  test_get_timeseriesrevision.py  test_get_timeseriestable.py
(+45 files in other folders)
