[tool.poetry]
name = "pysdmx"
version = "0.1.0"
description = "Python Interface to SDMX Web Services"
authors = ["Francesco Romano"]
packages = [{include = "pysdmx", from="src"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"